--- a/src/amazon/res/values-pt/strings.xml
+++ b/src/amazon/res/values-pt/strings.xml
@@ -58,9 +58,7 @@
     <string name="address_book_access_error">Esta aplicação não tem acesso aos seus contactos. Pode
         permitir o acesso nas definições de privacidade do seu dispositivo.
     </string>
-    <string name="camera_access_error">A aplicação não tem acesso à câmara. Podes dar-lhe acesso
-        alterando as definições de privacidade do teu dispositivo.
-    </string>
+    <string name="camera_access_error">A aplicação não tem acesso à câmara. Podes dar-lhe acesso alterando as definições de privacidade do teu dispositivo.</string>
     <string name="profile_deleted_user">Utilizador foi eliminado</string>
     <string name="filter_main_parameters">Estou interessado(a) em</string>
     <string name="dating_prev_button_ext">Anterior</string>
@@ -839,27 +837,16 @@
     <string name="novice_sympathy">Envia gostos apenas às pessoas\npor quem te sentes
         atraído(a).\nPodes encontrar alguém especial!
     </string>
-    <string name="go_dating_message">Começa a conhecer pessoas e aqui irão aparecer os nomes dos
-        utilizadores que viram o teu perfil.
-    </string>
-    <string name="photo_not_from_main_album">Um moderador decidiu que esta foto não pode ser usada
-        como foto de perfil.
-    </string>
+    <string name="go_dating_message">Começa a conhecer pessoas e aqui irão aparecer os nomes dos utilizadores que viram o teu perfil.</string>
+    <string name="photo_not_from_main_album">Um moderador decidiu que esta foto não pode ser usada como foto de perfil.</string>
     <string name="sidebar_vk_profile">Perfil VK</string>
     <string name="title_vk_profile">Perfil VK</string>
-    <string name="vk_profile_invite_friends_error">O utilizador já não está a aceitar convites
-    </string>
-    <string name="foreign_profile_empty_gifts_title">Envia um presente e serás o centro das
-        atenções
-    </string>
+    <string name="vk_profile_invite_friends_error">O utilizador já não está a aceitar convites</string>
+    <string name="foreign_profile_empty_gifts_title">Envia um presente e serás o centro das atenções</string>
     <string name="chat_auto_reply_title">O texto da mensagem está oculto</string>
-    <string name="chat_auto_reply_message">Para poder abrir/responder a esta mensagem, torne-se
-        VIP
-    </string>
+    <string name="chat_auto_reply_message">Para poder abrir/responder a esta mensagem, torne-se VIP</string>
     <string name="chat_auto_reply_button">Tornar-se VIP</string>
-    <string name="photo_list_load_info">Partilha as tuas fotos para que milhões de pessoas as
-        vejam
-    </string>
+    <string name="photo_list_load_info">Partilha as tuas fotos para que milhões de pessoas as vejam</string>
     <string name="vk_profile_button_tf_group">Grupo Topface</string>
     <string name="vk_profile_button_join_tf_group">Junta-te ao grupo Topface</string>
     <string name="vk_profile_button_join_vkgames_group">Junta-te ao grupo \"Jogos VK\"</string>
@@ -871,14 +858,9 @@
     <string name="vk_friends_success_invite">Foi enviado um convite</string>
     <string name="join_group_success">Juntaste-te ao grupo</string>
     <string name="settings_auto_greeting_title">Saudação Automática</string>
-    <string name="settings_auto_greeting_subtitle">Permitir ao Topface começar automaticamente uma
-        conversa com uma saudação sempre que alguém te envia um Gosto
-    </string>
-    <string name="take_photo_text_1">Por favor, faz upload de uma foto tua para começares a falar.
-    </string>
-    <string name="take_photo_text_2">Apenas tu deves estar na foto; todas as fotos são revistas
-        pelos nossos moderadores para garantir que as regras são seguidas.
-    </string>
+    <string name="settings_auto_greeting_subtitle">Permitir ao Topface começar automaticamente uma conversa com uma saudação sempre que alguém te envia um Gosto</string>
+    <string name="take_photo_text_1">Por favor, faz upload de uma foto tua para começares a falar.</string>
+    <string name="take_photo_text_2">Apenas tu deves estar na foto; todas as fotos são revistas pelos nossos moderadores para garantir que as regras são seguidas.</string>
     <string name="unlock_by_viewed_ad_video_button_text">Desbloquear gratuitamente a %s</string>
     <plurals name="free_minutes">
         <item quantity="zero">%d minuto</item>
@@ -886,43 +868,21 @@
         <item quantity="one">%d minuto</item>
     </plurals>
     <string name="thanks_for_your_rate_title">Obrigada pela tua opinião</string>
-    <string name="thanks_for_your_rate_top_label">Para mostrar a nossa gratidão, iremos postar uma
-        foto tua no feed de notícias das fotos!
-    </string>
-    <string name="thanks_for_your_rate_bottom_label">Partilha a tua opinião na App Store.
-        Valorizamos todos os comentários!
-    </string>
+    <string name="thanks_for_your_rate_top_label">Para mostrar a nossa gratidão, iremos postar uma foto tua no feed de notícias das fotos!</string>
+    <string name="thanks_for_your_rate_bottom_label">Partilha a tua opinião na App Store. Valorizamos todos os comentários!</string>
     <string name="thanks_for_your_rate_rate_app">Deixa a tua opinião na App Store</string>
     <string name="thanks_for_your_rate_close">Fechar</string>
     <plurals name="novice_sympathies_bonuses">
-        <item quantity="zero">Irás receber %1$d Gostos como \npresente! Isto significa que aqueles a
-            \nquem enviares Gostos \ngostam mesmo %2$d de ti
-        </item>
-        <item quantity="other">Irás receber %1$d Gostos como \npresente! Isto significa que aqueles
-            a \nquem enviares Gostos \ngostam mesmo %2$d de ti
-        </item>
-        <item quantity="one">Irás receber %1$d Gosto como \npresente! Isto significa que aqueles a
-            \nquem enviares Gostos \ngostam mesmo %2$d de ti
-        </item>
+        <item quantity="zero">Irás receber %1$d Gostos como \npresente! Isto significa que aqueles a \nquem enviares Gostos \ngostam mesmo %2$d de ti</item>
+        <item quantity="other">Irás receber %1$d Gostos como \npresente! Isto significa que aqueles a \nquem enviares Gostos \ngostam mesmo %2$d de ti</item>
+        <item quantity="one">Irás receber %1$d Gosto como \npresente! Isto significa que aqueles a \nquem enviares Gostos \ngostam mesmo %2$d de ti</item>
     </plurals>
-    <string name="buy_vip_title_from_input">Podes começar uma conversa com um utilizador se tiveres
-        estatuto VIP
-    </string>
+    <string name="buy_vip_title_from_input">Podes começar uma conversa com um utilizador se tiveres estatuto VIP</string>
     <string name="mutual_like_popup_text">O sentimento é mútuo!</string>
     <string name="mutual_like_popup_button">Diz \"Olá\"</string>
-    <string name="people_nearby_access_to_location_description">Para veres quem está nas
-        proximidades, tens de permitir o acesso à tua localização.
-    </string>
-    <string name="people_nearby_not_enought_money">Não tens Moedas suficientes para aceder à
-        funcionalidade \"Pessoas Perto de Mim\"\
-    </string>
-    <string name="people_nearby_not_found_title">Não existem utilizadores perto de ti neste
-        momento
-    </string>
-    <string name="people_nearby_not_found_description">Para tentares novamente, prime e mantém o teu
-        dedo no centro do ecrã
-    </string>
-    <string name="NSLocationWhenInUseUsageDescription">Para teres acesso a esta funcionalidade, tens
-        de dar a tua permissão
-    </string>
+    <string name="people_nearby_access_to_location_description">Para veres quem está nas proximidades, tens de permitir o acesso à tua localização.</string>
+    <string name="people_nearby_not_enought_money">Não tens Moedas suficientes para aceder à funcionalidade \"Pessoas Perto de Mim\"\</string>
+    <string name="people_nearby_not_found_title">Não existem utilizadores perto de ti neste momento</string>
+    <string name="people_nearby_not_found_description">Para tentares novamente, prime e mantém o teu dedo no centro do ecrã</string>
+    <string name="NSLocationWhenInUseUsageDescription">Para teres acesso a esta funcionalidade, tens de dar a tua permissão</string>
 </resources>
