--- a/src/appland/res/values-de/strings.xml
+++ b/src/appland/res/values-de/strings.xml
@@ -56,9 +56,7 @@
     <string name="address_book_access_error">Diese App hat keinen Zugang zu Ihren Kontakten. Sie
         können den Zugang in Datenschutzeinstellungen Ihres Geräts erlauben
     </string>
-    <string name="camera_access_error">App hat keinen Zugang zur Kamera. Du kannst den Zugang
-        erlauben, indem du zu den Privatsphäre Einstellungen deines Gerätes gehst.
-    </string>
+    <string name="camera_access_error">App hat keinen Zugang zur Kamera. Du kannst den Zugang erlauben, indem du zu den Privatsphäre Einstellungen deines Gerätes gehst.</string>
     <string name="profile_deleted_user">Nutzer ist gelöscht</string>
     <string name="filter_main_parameters">Ich interessiere mich für</string>
     <string name="dating_prev_button_ext">Voriger</string>
@@ -281,9 +279,7 @@
     <string name="settings_guests">Gäste</string>
     <string name="settings_help">Hilfe</string>
     <string name="settings_faq">Fragen und antworten</string>
-    <string name="settings_faq_title">Vielleicht wurde dein Problem schon gelöst, bitte schaue zu
-        den häufig gestellten Fragen.
-    </string>
+    <string name="settings_faq_title">Vielleicht wurde dein Problem schon gelöst, bitte schaue zu den häufig gestellten Fragen.</string>
     <string name="settings_account">Account</string>
     <string name="settings_feedback">Meinung abgeben</string>
     <string name="settings_about">Über das Programm</string>
@@ -608,9 +604,7 @@
     <string name="likes_can_help_you">Die Sympathien helfen Ihnen neue Bekanntschaften zu knüpfen</string>
     <string name="general_get_dating">Kennen lernen</string>
     <string name="settings_select_language">Sprache wählen</string>
-    <string name="settings_select_preload_photo_type">Wähle, wann Fotos Vorladen angeschaltet sein
-        soll
-    </string>
+    <string name="settings_select_preload_photo_type">Wähle, wann Fotos Vorladen angeschaltet sein soll</string>
     <string name="restart_to_change_locale">Für den Sprachwechsel wird die App neu gestartet</string>
     <string name="locale_changing">Sprache ändern</string>
     <plurals name="you_were_liked">
@@ -734,30 +728,21 @@
     <string name="pull_to_refresh_release_label">Loslassen um neu zu laden</string>
     <string name="messaging_block_buy_vip">Um die Konversation fortzuführen brauchst du VIP\u2011Status</string>
     <string name="pull_to_refresh_refreshing_label">Laden…</string>
-    <string name="user_added_to_black_list">Der Nutzer wurde deiner schwarzen Liste hinzugefügt.
-    </string>
-    <string name="user_deleted_from_black_list">Der Nutzer wurde von deiner schwarzen Liste
-        entfernt.
-    </string>
+    <string name="user_added_to_black_list">Der Nutzer wurde deiner schwarzen Liste hinzugefügt.</string>
+    <string name="user_deleted_from_black_list">Der Nutzer wurde von deiner schwarzen Liste entfernt.</string>
     <string name="user_added_to_bookmark">Der Nutzer wurde deinen Favoriten zugefügt.</string>
-    <string name="user_deleted_from_bookmark">Der Nutzer wurde von deinen Favoriten entfernt.
-    </string>
+    <string name="user_deleted_from_bookmark">Der Nutzer wurde von deinen Favoriten entfernt.</string>
     <string name="preload_photo_type_wifi_3g">WiFi und 3G</string>
     <string name="preload_photo_type_wifi">Nur WiFi</string>
     <string name="preload_photo_type_always_on">Immer an</string>
     <string name="preload_photo_type_preload_off">Aus</string>
-    <string name="wrong_time_popup_text">Keine sichere Verbindung möglich. Vielleicht sind deine
-        Datums- und Zeiteinstellungen nicht korrekt.
-    </string>
+    <string name="wrong_time_popup_text">Keine sichere Verbindung möglich. Vielleicht sind deine Datums- und Zeiteinstellungen nicht korrekt.</string>
     <string name="wrong_time_popup_button">Einstellungen öffnen</string>
     <string name="enter_text">Text eingeben</string>
     <string name="send_feedback">Nachricht verschicken</string>
     <string name="get_vip_free">Hole dir gratis VIP-Status</string>
     <string name="buy_more_sympathies">Hole dir mehr Likes, werde beliebt</string>
-    <string name="transaction_code_help">Wenn du uns einen Transaktionscode schickst, wird uns das
-        helfen deine Anfrage zu bearbeiten indem die Überarbeitungszeit verkürzt wird. Mehr
-        Informationen gibt es unter %s.
-    </string>
+    <string name="transaction_code_help">Wenn du uns einen Transaktionscode schickst, wird uns das helfen deine Anfrage zu bearbeiten indem die Überarbeitungszeit verkürzt wird. Mehr Informationen gibt es unter %s.</string>
     <string name="google_wallet">Google Geldbeutel</string>
     <string name="google_service_general_title">Erinnerungen sind nicht verfügbar</string>
     <string name="google_service_disabled_title">Du hast Google Play nicht zugelassen. Du musst es zulassen, um neue Benachrichtigungen zu erhalten.</string>
@@ -796,23 +781,14 @@
     <string name="novice_sympathy">Senden Sie Sympathien den Menschen, die Ihnen\nwirklich
         gefallen,\num eine angenehme Bekanntschaft anzufangen
     </string>
-    <string name="go_dating_message">Fange an, Leute kennenzulernen und die Namen derjenigen, die
-        dein Profil besucht haben, werden hier erscheinen.
-    </string>
-    <string name="photo_not_from_main_album">Unsere Moderatoren haben entschieden, dass dieses Foto
-        nicht als Profilfoto verwendet werden darf.
-    </string>
+    <string name="go_dating_message">Fange an, Leute kennenzulernen und die Namen derjenigen, die dein Profil besucht haben, werden hier erscheinen.</string>
+    <string name="photo_not_from_main_album">Unsere Moderatoren haben entschieden, dass dieses Foto nicht als Profilfoto verwendet werden darf.</string>
     <string name="sidebar_vk_profile">VK Profil</string>
     <string name="title_vk_profile">VK Profil</string>
-    <string name="vk_profile_invite_friends_error">Der User akzeptiert keine Einladungen mehr
-    </string>
-    <string name="foreign_profile_empty_gifts_title">Verschicke ein Geschenk um alle Aufmerksamkeit
-        auf dich zu ziehen
-    </string>
+    <string name="vk_profile_invite_friends_error">Der User akzeptiert keine Einladungen mehr</string>
+    <string name="foreign_profile_empty_gifts_title">Verschicke ein Geschenk um alle Aufmerksamkeit auf dich zu ziehen</string>
     <string name="chat_auto_reply_title">Der Text der Nachricht ist verborgen</string>
-    <string name="chat_auto_reply_message">Um diese Nachricht zu öffnen oder um auf sie zu
-        antworten, musst du zum VIP werden.
-    </string>
+    <string name="chat_auto_reply_message">Um diese Nachricht zu öffnen oder um auf sie zu antworten, musst du zum VIP werden.</string>
     <string name="chat_auto_reply_button">Werde zum VIP</string>
     <string name="photo_list_load_info">Teile deine Fotos und werde von Millionen gesehen</string>
     <string name="vk_profile_button_tf_group">Topface-Gruppe</string>
@@ -826,54 +802,30 @@
     <string name="vk_friends_success_invite">Die Einladung wurde verschickt</string>
     <string name="join_group_success">Du bist der Gruppe beigetreten</string>
     <string name="settings_auto_greeting_title">Automatische Grüße</string>
-    <string name="settings_auto_greeting_subtitle">Erlaube Topface, automatisch ein Gespräch zu
-        starten, wenn dir jemand ein Like schickt
-    </string>
+    <string name="settings_auto_greeting_subtitle">Erlaube Topface, automatisch ein Gespräch zu starten, wenn dir jemand ein Like schickt</string>
     <string name="take_photo_text_1">Bitte lade ein Foto von dir hoch, um zu chatten.</string>
-    <string name="take_photo_text_2">Nur du selbst solltest auf dem Foto abgebildet sein; alle Fotos
-        werden von Moderatoren überprüft um sicherzustellen, dass den Regeln gefolgt wird.
-    </string>
+    <string name="take_photo_text_2">Nur du selbst solltest auf dem Foto abgebildet sein; alle Fotos werden von Moderatoren überprüft um sicherzustellen, dass den Regeln gefolgt wird.</string>
     <string name="unlock_by_viewed_ad_video_button_text">Gratis entsperren bei %s</string>
     <plurals name="free_minutes">
         <item quantity="other">%d Minuten</item>
         <item quantity="one">%d Minute</item>
     </plurals>
     <string name="thanks_for_your_rate_title">Vielen Dank für deine Bewertung.</string>
-    <string name="thanks_for_your_rate_top_label">Um unsere Dankbarkeit zu zeigen, werden wir dein
-        Foto im Newsfeed anzeigen!
-    </string>
-    <string name="thanks_for_your_rate_bottom_label">Teile deine Gedanken im App Store. Wie schätzen
-        jede Bewertung!
-    </string>
+    <string name="thanks_for_your_rate_top_label">Um unsere Dankbarkeit zu zeigen, werden wir dein Foto im Newsfeed anzeigen!</string>
+    <string name="thanks_for_your_rate_bottom_label">Teile deine Gedanken im App Store. Wie schätzen jede Bewertung!</string>
     <string name="thanks_for_your_rate_rate_app">Schreibe eine Bewertung im App Store.</string>
     <string name="thanks_for_your_rate_close">Schließen</string>
     <plurals name="novice_sympathies_bonuses">
-        <item quantity="zero">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen,
-            \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
-        </item>
-        <item quantity="other">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen,
-            \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
-        </item>
-        <item quantity="one">Du bekommst %1$d Like als \nGeschenk! Das bedeutet, dass diejenigen,
-            \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
-        </item>
+        <item quantity="zero">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
+        <item quantity="other">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
+        <item quantity="one">Du bekommst %1$d Like als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
     </plurals>
-    <string name="buy_vip_title_from_input">Du kannst ein Gespräch mit einem anderen User starten,
-        wenn du VIP-Status hast.
-    </string>
+    <string name="buy_vip_title_from_input">Du kannst ein Gespräch mit einem anderen User starten, wenn du VIP-Status hast.</string>
     <string name="mutual_like_popup_text">Das Gefühl beruht auf Gegenseitigkeit!</string>
     <string name="mutual_like_popup_button">Sag \"Hallo\"</string>
-    <string name="people_nearby_access_to_location_description">Um zu sehen wer in deiner Nähe ist,
-        musst du Zugang zu deiner Standpunktortung erlauben.
-    </string>
-    <string name="people_nearby_not_enought_money">Du hast nicht genug Coins für Zugang zur \"Leute
-        in meiner Nähe\" Funktion.
-    </string>
+    <string name="people_nearby_access_to_location_description">Um zu sehen wer in deiner Nähe ist, musst du Zugang zu deiner Standpunktortung erlauben.</string>
+    <string name="people_nearby_not_enought_money">Du hast nicht genug Coins für Zugang zur \"Leute in meiner Nähe\" Funktion.</string>
     <string name="people_nearby_not_found_title">Es gibt momentan keine User in deiner Nähe</string>
-    <string name="people_nearby_not_found_description">Um es nochmal zu versuchen, presse und halte
-        einen Finger in der Mitte vom Bildschirm
-    </string>
-    <string name="NSLocationWhenInUseUsageDescription">Um Zugang zu dieser Funktion erhalten, musst
-        du dein Einverständnis gegen.
-    </string>
+    <string name="people_nearby_not_found_description">Um es nochmal zu versuchen, presse und halte einen Finger in der Mitte vom Bildschirm</string>
+    <string name="NSLocationWhenInUseUsageDescription">Um Zugang zu dieser Funktion erhalten, musst du dein Einverständnis gegen.</string>
 </resources>
