--- a/src/blueStacks/res/values-et/strings.xml
+++ b/src/blueStacks/res/values-et/strings.xml
@@ -19,10 +19,8 @@
   <string name="buying_store_purchase">Sooritan ostu iTunes Store\'is</string>
   <string name="buying_tf_ack_sending">Saadan info Spark\'ist ostu kohta</string>
   <string name="leaders_select_photo">Vali efektse foto</string>
-  <string name="general_bookmarks_is_deleted">Kasutaja on väljavalitute hulgast ära kustutatud
-  </string>
-  <string name="general_blacklist_is_deleted">Kasutaja on mustast nimekirjast ära kustutatud
-  </string>
+  <string name="general_bookmarks_is_deleted">Kasutaja on väljavalitute hulgast ära kustutatud</string>
+  <string name="general_blacklist_is_deleted">Kasutaja on mustast nimekirjast ära kustutatud</string>
   <string name="invite_friends_title_short">Kutsuda kõik sõbrad Spark\'i</string>
   <string name="general_bookmarks_add_short">Väljavalitute hulka</string>
   <string name="general_complaint">Edasi kaevata</string>
@@ -36,15 +34,11 @@
   <string name="vip_invisible_mode">Nähtamatu rezhiim</string>
   <string name="buying_profile_coins">Sinu kontol/ Sinu arvel</string>
   <string name="vip_info_title">VIP-eelised</string>
-  <string name="profile_gifts_empty">Sellele kasutajale pole/ ei ole veel keegi kingitusi
-    kinkinud.
-  </string>
+  <string name="profile_gifts_empty">Sellele kasutajale pole/ ei ole veel keegi kingitusi kinkinud.</string>
   <string name="profile_mygifts_empty">Sulle pole veel keegi kingitusi kinkinud.</string>
   <string name="dating_people_unnoticed">Kümme inimest on ilma sinu tähelepanuta jäänud!</string>
   <string name="dating_continue">Tutvumisega jätkata</string>
-  <string name="dating_better_look">Vaata tähelepanelikumalt! Võib-olla jääd sa oma saatusest
-    ilma!
-  </string>
+  <string name="dating_better_look">Vaata tähelepanelikumalt! Võib-olla jääd sa oma saatusest ilma!</string>
   <string name="edit_my_photos">Minu fotod</string>
   <string name="general_search_empty_title">Kahjuks, ei ole midagi leitud.</string>
   <string name="map_title">Kaart</string>
@@ -52,8 +46,7 @@
   <string name="popup_version_title">On saadaval rakenduse uus versioon</string>
   <string name="popup_version_message">Õige aeg versiooni uuendamiseks!</string>
   <string name="leaders_select_photo_info">Vali kõige efektsem foto välja! Madalama reitinguga
-    fotode valimine ei ole lubatud.
-  </string>
+        fotode valimine ei ole lubatud.</string>
   <string name="map_popup_address">Aadress</string>
   <string name="black_list_activation">Aktiveeri VIP-staatust ja kasuta musta nimekirja</string>
   <string name="buying_total">Kokku</string>
@@ -64,8 +57,7 @@
   <string name="buy_vip_month_other">%1$d kuud %2$.2f %3$@ eest</string>
   <string name="general_bookmarks_title">Väljavalitud</string>
   <string name="general_no_fans">Ei ole kummardajaid</string>
-  <string name="general_user_bookmarkadd">Kasutaja on \&quot;Väljavalitute\&quot; hulka lisatud.
-  </string>
+  <string name="general_user_bookmarkadd">Kasutaja on \&quot;Väljavalitute\&quot; hulka lisatud.</string>
   <string name="filter_hint">Sisesta/sisestage nimi</string>
   <plurals name="get_free_money">
     <item quantity="other">%d münti tasuta</item>
@@ -200,15 +192,12 @@ Sa oled müksanud.</string>
   </plurals>
   <string name="general_edit_profile_message">Palun, täida ankeedi vajalikud väljad ära</string>
   <string name="general_search_null_response_error">Ei ole midagi leitud. Proovi muuta otsingu
-    parameetrid/filtrid
-  </string>
+        parameetrid/filtrid</string>
   <string name="change_filters">Filtrid muuta</string>
   <string name="general_sex">Sugu</string>
   <string name="general_girl">Nais-, naiste</string>
   <string name="general_boy">Mees-/ meeste</string>
-  <string name="filter_city_fail">Ei ole ühtegi linna leitud, mille nimetus oleks «%s» tähega
-    alganud.
-  </string>
+  <string name="filter_city_fail">Ei ole ühtegi linna leitud, mille nimetus oleks «%s» tähega alganud.</string>
   <string name="age_filter_man">Sind huvitavad noormehed</string>
   <string name="age_filter_girl">Sind huvitavad neiud</string>
   <string name="settings_melody">Teatamisviis/Teatamise meloodia</string>
@@ -226,12 +215,8 @@ Sa oled müksanud.</string>
   <string name="black_list_delete">Mustast nimekirjast eemaldada</string>
   <string name="vip_buy_vip">VIP\'i ost/ostmine</string>
   <string name="vip_state_off">Sinu VIP-staatust ei ole aktiveeritud.</string>
-  <string name="vip_info_guest">Saa teada, kes on sinu vastu huvi tundnud - vaata omad külalised
-    ära!
-  </string>
-  <string name="vip_info_blackList">Saa tüütudest isikutest lahti \&quot;musta nimekirja\&quot;
-    abil
-  </string>
+  <string name="vip_info_guest">Saa teada, kes on sinu vastu huvi tundnud - vaata omad külalised ära!</string>
+  <string name="vip_info_blackList">Saa tüütudest isikutest lahti \&quot;musta nimekirja\&quot; abil</string>
   <string name="buying_vip_status">VIP-staatust osta</string>
   <string name="edit_my_city">Minu linn</string>
   <string name="settings_feedback_email">Kontakt e-posti aadress</string>
@@ -239,8 +224,7 @@ Sa oled müksanud.</string>
   <string name="chat_write_message">Sõnumi kirjutada</string>
   <string name="buying_sympathies">Sümpaatiate/meeldimiste ost/ostmine</string>
   <string name="general_reconnect_social">Sotsiaalvõrgustikuga ühendus ei ole võimalik. Korda
-    katset hiljem.
-  </string>
+        katset hiljem.</string>
   <string name="general_block">Blokeerida</string>
   <string name="general_buying_disabled">Käesoleval hetkel/momendil on ostmine võimatu.</string>
   <string name="virus_chat_btn">Meeldimised saada</string>
@@ -248,8 +232,7 @@ Sa oled müksanud.</string>
   <string name="popup_version_update">Uuendada</string>
   <string name="popup_version_cancel">Tuletada hiljem meelde</string>
   <string name="general_version_not_supported">Sinu rakenduse versioon on vananenud ja seda enam
-    ei toetata. Palun uuenda oma rakenduse versioon ära.
-  </string>
+        ei toetata. Palun uuenda oma rakenduse versioon ära.</string>
   <string name="default_price_format">Kokku:</string>
   <string name="general_gift">Kingitus</string>
   <string name="user_actions_chat">Jutt</string>
@@ -275,8 +258,7 @@ Sa oled müksanud.</string>
   <string name="default_photo_upload_error">Laadimise viga</string>
   <string name="default_photo_upload_complete">Ülesselaadimine on lõpetatud!</string>
   <string name="general_error_try_again_later">Ei ole võimalik Spark\'iga liituda. Proovi
-    korrata katse hiljem.
-  </string>
+        korrata katse hiljem.</string>
   <string name="search_city_by_name">Linna otsing nimetuse järgi</string>
   <string name="gallery">Galerii</string>
   <string name="change_password">Muuta salasõna</string>
@@ -295,8 +277,7 @@ Sa oled müksanud.</string>
   <string name="email_confirmed">e-posti aadress on ära kinnitatud!</string>
   <string name="sympathy_sended">Meeldimine on ära saadetud.</string>
   <string name="general_photo_deleted">Sinu foto ei vasta reeglite nõuetele ja oli
-    eemaldatud/kustutatud.
-  </string>
+        eemaldatud/kustutatud.</string>
   <string name="general_change">Ära muuta</string>
   <string name="status_is_empty">Sinu/teie staatus ei ole kindlaks määratud</string>
   <string name="you_dont_have_gifts_yet">Sa pole siiamani kingitusi saanud</string>
@@ -310,17 +291,14 @@ Sa oled müksanud.</string>
   <string name="general_bookmarks">Väljavalitud</string>
   <string name="general_fans">Kummardajad</string>
   <string name="settings_edit_profile">Profiili toimetada</string>
-  <string name="general_bookmarks_delete">Väljavalitutest/Väljavalitute hulgast
-    eemaldada/kustutada
-  </string>
+  <string name="general_bookmarks_delete">Väljavalitutest/Väljavalitute hulgast eemaldada/kustutada</string>
   <string name="general_bookmarks_add">Lisada/lisama \&quot;Väljavalitute\&quot; hulka</string>
   <string name="buy_resources">Varu ära täiendada</string>
   <string name="user_is_banned">Kasutaja on ära keelatud</string>
   <string name="profile_empty_name">Väli \&quot;Nimi\&quot; ei tohi tühi olema</string>
   <string name="general_input_email">Sisesta oma e-posti aadress/e-mail</string>
   <string name="vip_stop_ads">Ainult suhtlemine, mitte midagi muud.VIP-kasutajatel reklaam
-    puudub.
-  </string>
+        puudub.</string>
   <string name="friend_email_hint">Sisesta sõbra e-posti aadress või telefoninumber</string>
   <string name="general_add">Lisada</string>
   <string name="general_invite_friends">Kutsu/kutsuge sõpru</string>
@@ -338,11 +316,9 @@ Sa oled müksanud.</string>
     <item quantity="one">Saa VIP tasuta %d kutse eest</item>
   </plurals>
   <string name="buy_status_and_watch_your_fans">Osta VIP-staatus ja saa teada, kes on sind \&quot;Välja
-    valitute\&quot; hulka lisanud
-  </string>
+        valitute\&quot; hulka lisanud</string>
   <string name="with_vip_find_your_visitors">VIP-staatusega saad sa teada kes on sinu lehekülge
-    külastanud
-  </string>
+        külastanud</string>
   <string name="incorrect_photo_size">Foto lubamatu suurus</string>
   <string name="input_contact_name">Sisesta kontakti nimi</string>
   <string name="complain_photo_header">Ebakorrektne foto</string>
