--- a/src/blueStacks/res/values-ko/strings.xml
+++ b/src/blueStacks/res/values-ko/strings.xml
@@ -11,9 +11,7 @@
   <string name="chat_background_text">받은 메세지 없음</string>
   <string name="filter_only_online">온라인에서만</string>
   <string name="filter_select_city">도시 선택</string>
-  <string name="dashbrd_popup_rating">어플이 마음에 드시나요? 그렇다면 평가 부탁드립니다. 더 높은 평가를 할 수록 더 흥미 있는 사람들이
-    Spark에 참여하게 됩니다.
-  </string>
+  <string name="dashbrd_popup_rating">어플이 마음에 드시나요? 그렇다면 평가 부탁드립니다. 더 높은 평가를 할 수록 더 흥미 있는 사람들이 Spark에 참여하게 됩니다.</string>
   <string name="dashbrd_popup_title">순위</string>
   <string name="dashbrd_popup_cancel">더 이상 묻지 않기</string>
   <string name="dashbrd_popup_rate">평가하기.</string>
@@ -51,13 +49,11 @@
   <string name="popup_version_message">자신의 버전을 설정할 때 입니다!</string>
   <string name="leaders_select_photo_info">가장 자신이 잘 나온 사진을 선택해 주세요! 낮은 순위의 사진은 선택할 수 없습니다.</string>
   <string name="map_popup_address">주소</string>
-  <string name="black_list_info">당신은 블랙 리스트에 이웃을 추가하였습니다. VIP상태 설정의 프로필에서 해당 사항을 변경할 수 있습니다.
-  </string>
+  <string name="black_list_info">당신은 블랙 리스트에 이웃을 추가하였습니다. VIP상태 설정의 프로필에서 해당 사항을 변경할 수 있습니다.</string>
   <string name="black_list_activation">VIP 상태를 등록하여 블랙 리스트를 이용해 보세요.</string>
   <string name="buying_total">총합</string>
   <string name="we_dont_detect_your_city">더 많은 사람과 가깝게 교제를 하기 위해서 당신의 위치를 알아야 합니다. 자신의 도시를
-    선택해보세요.
-  </string>
+        선택해보세요.</string>
   <string name="confirm_email">이메일을 확인해 주십시오.</string>
   <string name="password_sent">새로운 비밀번호가 당신의 이메일로 전송되었습니다.</string>
   <string name="buy_vip_month_one">%1$d 달 이용을 %2$.2f %3$@가격에</string>
@@ -69,7 +65,7 @@
   <string name="settings_invalid_name">이름 항목에 기호가 옳지 않은 기호가 포함되어 있습니다.</string>
   <string name="filter_hint">이름을 입력하십시오.</string>
   <plurals name="vip_add_more_friends">
-    <item quantity="other">아직 %d의 친구들을 초대하여 보세요.</item>
+    <item quantity="other">아직  %d의 친구들을 초대하여 보세요.</item>
   </plurals>
   <plurals name="get_free_money">
     <item quantity="other">%d 코인은 무료입니다.</item>
@@ -225,9 +221,7 @@
   <string name="vip_buy_vip">VIP 등급 구입</string>
   <string name="vip_state_off">당신의 VIP 상태가 아직 등록되지 않았습니다.</string>
   <string name="vip_info_guest">누가 자신에게 흥미를 보이는지 알아보세요 - 자신의 게스트들을 볼 수 있습니다.</string>
-  <string name="vip_info_invisible">눈치채지 못하게 다른이의 페이지를 방문해 보세요. \&quot;투명\&quot; 모드를 이용하여 할 수
-    있습니다.
-  </string>
+  <string name="vip_info_invisible">눈치채지 못하게 다른이의 페이지를 방문해 보세요. \&quot;투명\&quot; 모드를 이용하여 할 수 있습니다.</string>
   <string name="vip_info_message">특권을 받을 수 있습니다 - 당신의 메세지는 전체적인 배경으로 설정 될 수 있습니다.</string>
   <string name="vip_info_blackList">지겨운 상대에 대해서 \&quot;블랙리스트\&quot;를 이용하여 처리할 수 있습니다.</string>
   <string name="vip_info_vip">VIP 등급을 이용하여 자신의 프로필을 따로 분류할 수 있습니다.</string>
@@ -242,22 +236,19 @@
   <string name="general_buying_disabled">현재 구입이 불가능합니다.</string>
   <string name="ban_flood_detected">너무 자주 서버에 대한 요청을 하고 있습니다. 다음 사용자를 위해 조금만 대기 바랍니다.</string>
   <string name="general_maintenance">현재 서버의 기술적인 작업을 진행중인 관계로 당신의 요청 작업이 이행되지 않았습니다. 나중에 다시 시도해
-    주세요.
-  </string>
+        주세요.</string>
   <string name="virus_chat_btn">호감도 받기</string>
   <string name="profile_ask_sent">요청사항이 전송되었습니다.</string>
   <string name="virus_error">당신의 친구는 하루에 한번 만 호감도를 보낼 수 있습니다! 내일 다시 한번 시도해 보십시오!</string>
   <string name="popup_version_update">업데이트하기</string>
   <string name="popup_version_cancel">나중을 위해 기억해 두십시오.</string>
-  <string name="general_version_not_supported">당신의 어플 버젼이 더 이상 지원하지 않는 이전 버전입니다. 새롭게 업데이트 해주세요.
-  </string>
+  <string name="general_version_not_supported">당신의 어플 버젼이 더 이상 지원하지 않는 이전 버전입니다. 새롭게 업데이트 해주세요.</string>
   <string name="default_price_format">전체 금액은 %.2f USD 입니다.</string>
   <string name="leaders_pick_condition">%d%% 이하의 사진은 선택할 수 없습니다.</string>
   <string name="general_gift">선물</string>
   <string name="user_actions_chat">대화</string>
   <string name="profile_edit_age_ranges">연령은 16세에서 99에까지 설정이 되어야 합니다. 다시 한번 확인하시어 옳바른 숫자를 입력해 주시기
-    바랍니다.
-  </string>
+        바랍니다.</string>
   <string name="sign_in">들어가기</string>
   <string name="create_account">계정 만들기</string>
   <string name="email">E-mail</string>
@@ -306,8 +297,7 @@
   <string name="general_photo_deleted">업로딩한 사진이 톱페이스 규칙에 어긋나는 사항이 있어 삭제 되었습니다.</string>
   <string name="general_change">변경하기</string>
   <string name="user_does_not_have_gifts">아직 해당 사용자는 받은 선물이 없습니다. 당신이 맨 처음으로 선물을 한다면 상대도 당신을 알아보게
-    될 것입니다.
-  </string>
+        될 것입니다.</string>
   <string name="status_is_empty">현재 상태 설정이 되어 있지 않습니다.</string>
   <string name="you_dont_have_gifts_yet">아직 받은 선물이 없습니다.</string>
   <string name="buy_sympathies">호감도 구입하기</string>
@@ -351,11 +341,9 @@
   <string name="buy_status_and_watch_your_fans">VIP 상태를 구입하여 누가 당신의 팬인지 알아보세요.</string>
   <string name="add_bookmarks_to_be_connected">새롭게 만난 사람들을 이곳에 추가하여 지속적인 관계를 유지하여 보세요.</string>
   <string name="nobody_chat_with_you_sympathies_will_help">아직 당신에게 보내온 메세지가 없습니다. 호감도가 아마도 대화 상대를
-    찾아줄 수 있을것 같군요.
-  </string>
+        찾아줄 수 있을것 같군요.</string>
   <string name="rate_and_have_mutual_or_buy_and_chat">당신의 마음에 들어하는 상대에게 호감도를 보내고 상대방에게도 받아보세요. 또는
-    호감도를 구입하여 당신의 마음에 들어하는 상대와 대화를 할 수 있습니다.
-  </string>
+        호감도를 구입하여 당신의 마음에 들어하는 상대와 대화를 할 수 있습니다.</string>
   <string name="with_vip_find_your_visitors">VIP 상태를 이용하면 누가 당신의 페이지에 왔었는지 알 수 있습니다.</string>
   <string name="on_avatar">아바타로</string>
   <string name="your_avatar">당신의 아바타.</string>
@@ -373,13 +361,9 @@
   <string name="complain_type_picture">그림</string>
   <string name="complain_type_fake_user">유명인</string>
   <string name="complain_type_spam_msg">상업적 광고, 스팸, 광고, 타 사이트로 연결하는 링크, 전화</string>
-  <string name="complain_type_spam_profile">\&quot;상태\&quot; \&quot;자신에 관해\&quot; 항목에 상업적인 내용이
-    있습니다.
-  </string>
-  <string name="complain_type_swearing_profile">\&quot;상태\&quot; 및 \&quot;자신에 대한\&quot; 항목에서 비방,욕설,
-    위협적인 내용이 포함되어
-    있습니다.
-  </string>
+  <string name="complain_type_spam_profile">\&quot;상태\&quot; \&quot;자신에 관해\&quot; 항목에 상업적인 내용이 있습니다.</string>
+  <string name="complain_type_swearing_profile">\&quot;상태\&quot; 및 \&quot;자신에 대한\&quot; 항목에서 비방,욕설, 위협적인 내용이 포함되어
+        있습니다.</string>
   <string name="complain_type_fake_data">이름, 성별, 나이 및 사진이 일치하지 않습니다.</string>
   <string name="complain_description">불만의 원인에 대해 상세히 이야기 해주세요.</string>
   <string name="general_complain_sended">당신의 불만 사항이 접수 되었습니다. 도움을 주셔서 대단히 감사합니다.</string>
@@ -389,8 +373,7 @@
   <string name="general_no_notifications">유감스럽게도 통지서 받기 설정을 이용 불가능으로 해놓으셨습니다.</string>
   <string name="black_list_add_short">블랙 리스트로</string>
   <string name="confirm_email_for_dating">톱페이스에서는 스팸을 금지하고 있습니다. Spark를 계속 사용하기 위해서 자신의 이메일을 확인
-    해주십시오.
-  </string>
+        해주십시오.</string>
   <string name="complain_type_swearing_msg">비방, 욕설, 위협</string>
   <string name="general_exit">나가기</string>
   <string name="likes_can_help_you">호감도는 당신이 타인과 만날 수 있게 도와 줍니다.</string>
@@ -404,8 +387,7 @@
   <string name="or">또는</string>
   <string name="settings_delete_account">계정 삭제</string>
   <string name="chat_block_not_mutual">특정 사용자와의 교제를 시작하려면 VIP 상태를 소지하고 있거나 상대가 당신에게 호감을 보내야만
-    합니다.
-  </string>
+        합니다.</string>
   <string name="delete_account_are_you_sure">계속 하시겠습니까?</string>
   <string name="delete">삭제하기</string>
   <string name="delete_account_warning">주의 하십시오. Spark의 자신의 프로필 삭제 작업을 시도하였습니다.</string>
